[package]
name = "ssl-certificate-checker"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = { version = "1.28", features = ["full"] }
tokio-rustls = "0.23"
actix-web = { version = "4.3", features = ["rustls"] }
actix-cors = "0.6"
rustls = "0.20"
webpki-roots = "0.22"
x509-parser = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
rocket = "0.5.0-rc.2" 
rocket_cors = "0.5.0" 